Edit resources.html page to update some links

--- a/_templates/resources.html
+++ b/_templates/resources.html
@@ -23,7 +23,7 @@ id: resources
   </div><div>
     <h2 id="directories"><img src="/img/icons/ico_invoice.svg" class="titleicon" alt="Icon">{% translate directories %}</h2>
     <p><a href="/{{ page.lang }}/{% translate choose-your-wallet url %}">{% translate linkwallets %}</a> - {{site.name}}</p>
-    <p><a href="https://coinmap.org/">{% translate linkmerchants %}</a> - coinmap.org</p>
+    <p><a href="https://map.bitcoin.com">{% translate linkmerchants %}</a> - map.bitcoin.com</p>
     <p><a href="https://spendabit.co/">{% translate linkmerchants %}</a> - spendabit.co</p>
     <p><a href="https://99bitcoins.com/who-accepts-bitcoins-payment-companies-stores-take-bitcoins/">{% translate linkmerchants %}</a> - 99Bitcoins.com</p>
     <p><a href="https://www.buybitcoinworldwide.com/">{% translate linkexchanges %}</a> - buybitcoinworldwide.com</p>
@@ -56,12 +56,9 @@ id: resources
     {% if page.lang == 'ru' %}<p><a href="https://bitcointalk.org/index.php?board=128.0">Биткойн Форум / Новости</a></p>{% else %}<p><a href="https://bitcointalk.org/index.php?board=77.0">BitcoinTalk press links</a></p>{% endif %}
   </div><div>
     <h2 id="charts"><img src="/img/icons/ico_market.svg" class="titleicon" alt="Icon">{% translate charts %}</h2>
-    <p><a href="https://live.blockcypher.com/btc/">BlockCypher</a></p>
-    <p><a href="https://tradeblock.com">Trade Block</a></p>
-    <p><a href="https://bitcoincharts.com/charts/">Bitcoincharts.com</a></p>
-    <p><a href="https://gobitcoin.io/{% if 'en,fr,de,it,es' contains page.lang %}{{ page.lang }}/{% endif %}">GoBitcoin.io</a></p>
-    <p><a href="https://bitcoinaverage.com/{% if 'en,fr,de,it,es,pl,ru,ht,pt,tr,uk' contains page.lang %}{{ page.lang }}/bitcoin-price/btc-to-usd{% endif %}">BitcoinAverage</a></p>
-    <p><a href="https://bitvol.info/">Bitcoin Volatility Index</a></p>
+    <p><a href="https://cryptowat.ch/assets/bch">Cryptowat.ch</a></p>
+    <p><a href="https://explorer.bitcoin.com/bch/charts">Bitcoin.com Bitcoin Cash Charts</a></p>
+    <p><a href="https://markets.bitcoin.com/crypto/BCH">Bitcoin.com Bitcoin Cash Market</a></p>
   </div>
 </div>
 <div>
@@ -72,10 +69,7 @@ id: resources
     <p><a href="https://www.youtube.com/watch?v=6pWblf8COH4">The Bitcoin Phenomenon</a></p>
   </div><div>
     <h2 id="vouchers"><img src="/img/icons/ico_voucher.svg" class="titleicon" alt="Icon">{% translate vouchers %}</h2>
-    <p><a href="https://www.bitrefill.com/">Bitrefill</a></p>
-    <p><a href="https://foldapp.com/">Fold</a></p>
-    <p><a href="https://gyft.com/bitcoin/">Gyft</a></p>
-    <p><a href="https://opendime.com/">Opendime</a></p>
+    <p><a href="https://giftcards.bitcoin.com">Bitcoin.com Giftcards</a></p>
   </div>
 </div>
 </div>
