Update exchanges.html partially, and update resources.html partially

--- a/_templates/exchanges.html
+++ b/_templates/exchanges.html
@@ -24,18 +24,13 @@ id: exchanges
         <a href="https://bisq.network/">Bisq</a><br>
         <a href="https://www.bitstamp.net/">Bitstamp</a><br>
         <a href="https://bitwage.com/">Bitwage</a><br>
-        <a href="https://coinmama.com/">Coinmama</a><br>
         <a href="https://www.kraken.com/">Kraken</a><br>
-        <a href="https://localbitcoins.com/">Local Bitcoins</a><br>
+        <a href="https://local.bitcoin.com">Bitcoin.com Local</a><br>
       </p>
     </div>
     <div>
       <h3 id="europe"><img src="/img/flags/EU.png" alt="EU flag">Europe</h3>
       <p>
-        <a href="https://anycoindirect.eu">AnyCoin Direct</a><br>
-        <a href="https://www.bitcoin.de/">Bitcoin.de</a><br>
-        <a href="https://www.bitpanda.com/">BitPanda</a><br>
-        <a href="https://bl3p.eu/">BL3P</a><br>
         <a href="https://www.paymium.com/">Paymium</a><br>
         <a href="https://therocktrading.com">The Rock Trading</a>
       </p>
@@ -238,7 +233,7 @@ id: exchanges
       <h3 id="united-states"><img src="/img/flags/US.png" alt="United States flag">United States</h3>
       <p>
         <a href="https://gemini.com/">Gemini</a><br>
-        <a href="https://www.itbit.com/">itBit</a>
+	<a href="https://coinbase.com">Coinbase</a>
       </p>
     </div>
     <div>
