--- a/_templates/resources.html
+++ b/_templates/resources.html
@@ -49,16 +49,14 @@ id: resources
     {% endif %}
     {% if page.lang == 'es' %}<p><a href="https://www.criptonoticias.com/">CriptoNoticias</a></p>{% endif %}
     <p>{% translate linkcointelegraph %}<p>
-    <p><a href="http://www.coindesk.com">CoinDesk</a></p>
-    <p><a href="https://www.getrevue.co/profile/kyletorpey/">Kyle Torpey's Daily Bitcoin Recap</a></p>
-    <p><a href="https://bitcoinmagazine.com">Bitcoin Magazine</a></p>
-    <p><a href="http://coinjournal.net">CoinJournal</a></p>
+    <p><a href="https://news.bitcoin.com">Bitcoin.com News</a></p>
     {% if page.lang == 'ru' %}<p><a href="https://bitcointalk.org/index.php?board=128.0">Биткойн Форум / Новости</a></p>{% else %}<p><a href="https://bitcointalk.org/index.php?board=77.0">BitcoinTalk press links</a></p>{% endif %}
   </div><div>
     <h2 id="charts"><img src="/img/icons/ico_market.svg" class="titleicon" alt="Icon">{% translate charts %}</h2>
     <p><a href="https://cryptowat.ch/assets/bch">Cryptowat.ch</a></p>
     <p><a href="https://explorer.bitcoin.com/bch/charts">Bitcoin.com Bitcoin Cash Charts</a></p>
     <p><a href="https://markets.bitcoin.com/crypto/BCH">Bitcoin.com Bitcoin Cash Market</a></p>
+    <p><a href="https://cash.coin.dance">Coin Dance Stats</a></p>
   </div>
 </div>
 <div>
