--- a/_templates/community.html
+++ b/_templates/community.html
@@ -12,7 +12,6 @@ id: community
 <div>
   <div>
     <h2 id="forums"><img src="/img/icons/ico_invoice.svg" class="titleicon" alt="Icon">{% translate forums %}</h2>
-    <p>{% translate bitcointalk %}</p>
     <p><a href="https://forum.bitcoin.com">Bitcoin.com Forum</a></p>
     <p><a href="https://read.cash/forum">Read.cash Forum</a></p>
     <p><a href="https://reddit.com/r/btc/">{% translate reddit %}</a></p>
@@ -27,22 +26,10 @@ id: community
     <h2 id="meetups"><img src="/img/icons/ico_multi.svg" class="titleicon" alt="Icon">{% translate meetups %}</h2>
     <p><a href="https://bitcoin.meetup.com/">{% translate meetupgroup %}</a></p>
   </div><div>
-    <h2 id="irc"><img src="/img/icons/ico_help.svg" class="titleicon" alt="Icon">{% translate irc %}</h2>
-    <p>{% translate ircjoin %}</p>
-    <p>#bitcoin <small>{% translate chanbitcoin %}</small></p>
-    <p>#bitcoin-dev <small>{% translate chandev %}</small></p>
-    <p>#bitcoin-otc  <small>{% translate chanotc %}</small></p>
-    <p>#bitcoin-market <small>{% translate chanmarket %}</small></p>
-    <p>#bitcoin-mining <small>{% translate chanmining %}</small></p>
-    {% if page.lang == 'fr' %}
-    <p>#bitcoin-fr <small>(Le Bitcoin en général, français)</small></p>
-    <p>#cryptofr <small>(Bitcoin et crypto-monnaies, français)</small></p>
-    {% endif %}
-    {% if page.lang == 'es' %}
-    <p>#bitcoin-ar <small>(Comunidad Bitcoin Argentina)</small></p>
-    <p>#bitcoin-es <small>(Comunidad Bitcoin en español)</small></p>
-    <p>#bitcoin-otc-ar <small>(Mercado OTC de Bitcoin en Argentina)</small></p>
-    {% endif %}
+    <h2 id="irc"><img src="/img/icons/ico_help.svg" class="titleicon" alt="Icon">Chat</h2>
+    <p><a href="https://t.me/bchchannel">Bitcoin Cash Telegram (unofficial)</a></p>
+    <p><a href="https://t.me/bchgang">BCH GANG Telegram</a></p>
+    <p><a href="https://t.me/simpleledger">Simple Ledger Telegram</a></p>
   </div>
 </div>
 </div>
