--- a/_templates/resources.html
+++ b/_templates/resources.html
@@ -16,7 +16,6 @@ id: resources
     {% if page.lang == 'fr' %}<p><a href="https://openclassrooms.com/courses/comprendre-le-bitcoin-et-la-blockchain">OpenClassrooms</a></p>{% endif %}
     <p><a href="https://www.khanacademy.org/economics-finance-domain/core-finance/money-and-banking/bitcoin/v/bitcoin-what-is-it">Khan Academy</a></p>
     <p><a href="http://letstalkbitcoin.com/">Let's Talk Bitcoin</a></p>
-    <p><a href="http://www.bitcoin.kn/">Bitcoin Knowledge Podcast</a></p>
     <p><a href="https://www.weusecoins.com/">WeUseCoins.com</a></p>
     <p><a href="https://www.bitcoinmining.com/">BitcoinMining.com</a></p>
     <p><a href="http://www.iamsatoshi.com/category/video-archive/">IamSatoshi</a></p>
@@ -24,33 +23,13 @@ id: resources
     <h2 id="directories"><img src="/img/icons/ico_invoice.svg" class="titleicon" alt="Icon">{% translate directories %}</h2>
     <p><a href="/{{ page.lang }}/{% translate choose-your-wallet url %}">{% translate linkwallets %}</a> - {{site.name}}</p>
     <p><a href="https://map.bitcoin.com">{% translate linkmerchants %}</a> - map.bitcoin.com</p>
-    <p><a href="https://spendabit.co/">{% translate linkmerchants %}</a> - spendabit.co</p>
-    <p><a href="https://99bitcoins.com/who-accepts-bitcoins-payment-companies-stores-take-bitcoins/">{% translate linkmerchants %}</a> - 99Bitcoins.com</p>
-    <p><a href="https://www.buybitcoinworldwide.com/">{% translate linkexchanges %}</a> - buybitcoinworldwide.com</p>
-    <p><a href="https://en.bitcoin.it/wiki/Category:Shopping_Cart_Interfaces">{% translate linkmerchantstools %}</a> - en.bitcoin.it</p>
-    <p><a href="http://www.bitcoinprojects.net/">{% translate linkprojects %}</a> - BitcoinProjects.net</p>
+    <p><a href="https://www.bitcoin.com/bitcoin-cash-projects/">{% translate linkprojects %}</a> - bitcoin.com</p>
   </div>
 </div>
 <div>
   <div>
     <h2 id="news"><img src="/img/icons/ico_spread.svg" class="titleicon" alt="Icon">{% translate news %}</h2>
-    {% if page.lang == 'bg' %}<p><a href="http://hash.bg">Hash.bg</a></p>{% endif %}
-    {% if page.lang == 'de' %}<p><a href="https://bitcoinblog.de">BitcoinBlog.de</a></p>{% endif %}
-    {% if page.lang == 'fr' %}
-    <p><a href="https://le-coin-coin.fr">Le Coin Coin</a></p>
-    <p><a href="https://bitcoin.fr">Bitcoin.fr</a></p>
-    <p><a href="https://achat-bitcoin.fr/">Achat-bitcoin.fr</a></p>
-    {% endif %}
-    {% if page.lang == 'pl' %}<p><a href="https://satoshi.pl/">Satoshi.pl</a></p>{% endif %}
-    {% if page.lang == 'ru' %}
-    <p><a href="https://bitnovosti.com">Bit•Новости</a></p>
-    <p><a href="https://bits.media">Bits Media</a></p>
-    <p><a href="http://coinspot.ru">CoinSpot</a></p>
-    {% endif %}
-    {% if page.lang == 'es' %}<p><a href="https://www.criptonoticias.com/">CriptoNoticias</a></p>{% endif %}
-    <p>{% translate linkcointelegraph %}<p>
     <p><a href="https://news.bitcoin.com">Bitcoin.com News</a></p>
-    {% if page.lang == 'ru' %}<p><a href="https://bitcointalk.org/index.php?board=128.0">Биткойн Форум / Новости</a></p>{% else %}<p><a href="https://bitcointalk.org/index.php?board=77.0">BitcoinTalk press links</a></p>{% endif %}
   </div><div>
     <h2 id="charts"><img src="/img/icons/ico_market.svg" class="titleicon" alt="Icon">{% translate charts %}</h2>
     <p><a href="https://cryptowat.ch/assets/bch">Cryptowat.ch</a></p>
