Change links from reference.cash to bitcoinprotocol.cash

--- a/_templates/bitcoin-for-developers.html
+++ b/_templates/bitcoin-for-developers.html
@@ -32,8 +32,8 @@ id: bitcoin-for-developers
 {% endcomment %}
 {% assign langs = [ 'en', 'uk' ] %}
 {% if langs contains page.lang %}
-<div class="introlink"><a href="https://reference.cash">{% translate pagetitle developer-documentation %}</a></div>
+<div class="introlink"><a href="https://bitcoinprotocol.cash/">{% translate pagetitle developer-documentation %}</a></div>
 {% else %}
-<div class="introlink"><a href="https://reference.cash">Developer Documentation (English)</a></div>
+<div class="introlink"><a href="https://bitcoinprotocol.cash/">Developer Documentation (English)</a></div>
 {% endif %}
 <div class="mainbutton"><a href="/{{ page.lang }}/{% translate getting-started url %}"><img src="/img/icons/but_bitcoin.svg" alt="icon">{% translate getstarted layout %}</a></div>
