Change BCHN contact URL to just home page, and change wording

--- a/en/alerts.html
+++ b/en/alerts.html
@@ -36,6 +36,6 @@ title: Network status and alerts - Bitcoin
   {% endif %}{% endfor %}
   </ul>
   <p><a href="https://en.bitcoin.it/wiki/Common_Vulnerabilities_and_Exposures">Complete CVE list</a></p>
-  <p>Please refer to the <a href="https://bitcoincashnode.org/en/contact/">Bitcoin Cash Node contact page</a> page if you want to report a vulnerability.</p>
+  <p>Please refer to the <a href="https://bitcoincashnode.org">Bitcoin Cash Node team</a> if you want to report a vulnerability.</p>
 </div>
 
